Fix grammatical error in TODO comment

--- a/embedded QEC - relaxation/TODO
+++ b/embedded QEC - relaxation/TODO
@@ -1,1 +1,1 @@
-Upload relevant software/numerical simulations once the scientific paper have been published.
+Upload relevant software/numerical simulations once the scientific paper is published.
